feat(API) Add REST API with imperative programming
openapi.yml needs changes according to business logic and nullable objects

--- a/pom.xml
+++ b/pom.xml
@@ -137,8 +137,10 @@
                                 <library>spring-boot</library>
                                 <useTags>true</useTags>
                                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <notNullJacksonAnnotation>true</notNullJacksonAnnotation>
                                 <useSwaggerAnnotations>false</useSwaggerAnnotations>
                                 <serializableModel>true</serializableModel>
+                                <useOptional>true</useOptional>
                             </configOptions>
                         </configuration>
                     </execution>
