--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-server.port=8095
 spring.application.name=transaction_service
-spring.data.mongodb.uri=mongodb://localhost:27017/NTTBankingService
+
+#spring.data.mongodb.uri=mongodb://localhost:27017/NTTBankingService
+#server.port=8083
+
+spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.uri= http://localhost:8888
