feat(Microservice) Refactor endpoints and connections
Endpoints needed an update to connect with external services.
openapi dependencies and yml needed to be changed to match requirements of Contract First.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+#Spring name for configuration server
 spring.application.name=transaction_service
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/NTTBankingService
 #server.port=8083
 
+#ConfigServer connection
 spring.config.import=configserver:http://localhost:8888
 spring.cloud.config.uri= http://localhost:8888
+
+#Connection URI to Account Service
+external.account.service.uri = http://localhost:8085/api/accounts
+
+#Connection URI to Credit Service
+external.credit.service.uri = http://localhost:8585/api/v1/credits
